# workspace_2025

./: .gitignore  README.md  README_ja.md  book_review_template_YYYYMMDD.md
.github/workflows/: auto-close-devops-tools.yml  auto-close-reflection.yml
2025_container_workshop/: README.md
2025_container_workshop/001/: README.md
2025_container_workshop/002/: README.md
2025_container_workshop/003/: README.md
2025_container_workshop/004/: README.md
abc388/A/: Cargo.toml
abc388/A/src/: main.rs
abc388/C/src/: main.rs
abc388/D/src/: main.rs
abc388/hallo/: Cargo.toml
abc393/B/src/: main.rs
abc393/C/src/: main.rs
abc393/D/src/: main.rs
abc395/D/: Cargo.toml
abc395/E/src/: main.rs
abc395/F/: Cargo.toml
addition-api/: Cargo.toml
avante/src/: main.rs
blogs/: CLAUDE.md  README.md
blogs/.claude/agents/: ai-police.md  devil-advocate.md  fact-checker.md  fresh-eye-reviewer.md  narrative-architect.md  structure-reviewer.md  title-specialist.md
blogs/.claude/commands/: README.md  ai-humanity-check.md  beginner-feedback.md  blog-quality-review.md  critical-perspective.md  deep-thinking-prompt.md  full-review.md  narrative-empathy-review.md  punchline-review.md  redundancy-check.md  structural-thinking.md  textlint-polish.md  title-workshop.md
cargo-autodd/: Cargo.toml  README.md
cargo-autodd-sample/: Cargo.toml
cargo-autodd-sample/src/: main.rs
competitive_programming/abc393/B/: Cargo.toml
competitive_programming/abc393/C/: Cargo.toml
competitive_programming/abc395/A/: Cargo.toml  tests.toml
copilot_blog/: REAME.md
demo_codecompanion_nvim/: blocks.json
demo_codecompanion_nvim/tetris_game/: Cargo.toml
devsumi_2025/: README.md
docs/: CONTRIBUTING.md  book_review_template_YYYYMMDD.md  weekly_report_template.md
events/2025_container_workshop/001/: README.md
events/2025_container_workshop/002/: README.md
events/2025_container_workshop/003/: README.md
events/2025_container_workshop/005/: README.md
events/SRE_kaigi_2025/: README.md
events/slide/: README.md
infrastructure/2025_monitoring/: README.md
infrastructure/api-security-demo/: CLAUDE.md  Cargo.toml  README.md  blog.md  blog_01.md  blog_02.md
infrastructure/api-security-demo/scripts/: test_all.sh
infrastructure/api-security-demo/src/: auth.rs  db.rs  error.rs  lib.rs  models.rs
infrastructure/container-security-images/: README.md
infrastructure/linux-process-rs/: Cargo.toml  NIX_CRATE_GUIDE.md  README.md  blog.md
infrastructure/linux-process-rs/benches/: process_bench.rs
infrastructure/linux-process-rs/execution_results/: README.md  async_process.txt  basic_process.txt  final_results.md  fork_exec.txt  process_group.txt  secure_spawn.txt  signal_handling.txt  zombie_prevention.txt
infrastructure/linux-process-rs/src/: errors.rs  lib.rs  process.rs  process_guard.rs  process_pool.rs  signal.rs  utils.rs
infrastructure/linux-process-rs/src/examples/: article_demo.rs  article_pipe_communication.rs  article_process_group.rs  article_signal_control.rs  article_simple_command.rs  async_process.rs  basic_process.rs  fork_exec.rs  nix_daemon.rs  nix_fork_basic.rs  nix_fork_exec.rs  nix_multi_worker.rs  nix_signal_handler.rs  process_group.rs  secure_spawn.rs  signal_handling.rs  zombie_prevention.rs
infrastructure/linux-process-rs/tests/: integration_test.rs
infrastructure/neuvector-test/neuvector/: values.yaml
infrastructure/neuvector-test/tests/: deploy.sh
infrastructure/rust-signal-ipc/: .gitignore  Cargo.toml  README.md  blog.md
infrastructure/rust-signal-ipc/src/: errors.rs  ipc.rs  lib.rs
infrastructure/rust-signal-ipc/src/examples/: basic_signal.rs  edge_cases.rs  mod.rs  performance.rs  signal_mask.rs  test_runner.rs  thread_safety.rs
infrastructure/rust-signal-ipc/tests/: integration_test.rs
infrastructure/waf-test/: ModSecurity.md  README.md
infrastructure/waf-test/cluster/: kind-config.yaml
library-system/library-client/: Cargo.toml  build.rs
library-system/library-server/: Cargo.toml  library.db-shm  library.db-wal
library-system/library-server/.sqlx/: query-0285ae1b83dc1e2077b8aba979e1e12e5f6ee05f793aa07c0cdcd2fa6c427d71.json  query-bdee355e69f0a451661868456f78ce4a28b17f9d5c302671f80ea2e742419775.json  query-d3f494c93ab6f32f7d138749c35e49279c1fe10b9c90ae579ccaba791a4b2dbd.json  query-f983499009eb8560f62dbd51dfc47fbf77ab2e5386e12b56fab5402f9767fec6.json
library-system/library-server/migrations/: 20250110_init.sql
library-system/library-server/src/: main.rs
marp_presentations/: README.md
max_finder/src/: main.rs
neuvector-test/cluster/: kind-config.yaml
new_year/: Cargo.toml  README.md
new_year/src/: main.rs
samples/avante/: Cargo.toml
samples/demo_codecompanion_nvim/: tetris.py
samples/new_year/: Dockerfile  README.md
samples/new_year/src/: main.rs
samples/sample_code/: Cargo.toml
samples/tokage/: Cargo.toml  monotonic_tests.toml  tests.toml
samples/tokage/src/: app.rs  lib.rs  main.rs  test.rs
sparklers/: Cargo.toml
sparklers/src/: main.rs
tokage/: sample_tests.toml  tests.yaml
tokage/src/: ui.rs
tools/: .gitignore
tools/browser-use/: README.md
tools/cargo-autodd/: README.md
tools/ccat/: README.md
tools/claudelytics/: README.md
tools/container-use/: CLAUDE.md  CONTAINER-USE-GUIDE.md  container-use-tips.md
tools/marp.nvim/: .gitignore  LICENSE  README.md  test_marp.md
tools/mcp-clinet-rs/: README.md
tools/mcp-use/: README.md
tools/now_date/: Cargo.toml
tools/rust-edition-2024/: README.md
tools/rust_webapp_monitoring/: README.md
tools/tfmcp/: Cargo.toml  LICENSE  README.md  build.rs
tools/todo_app/: todos.json
tools/yamori/: Cargo.toml  README.md
waf-test/ingress/: Chart.yaml
waf-test/test-app/: ingress.yaml
web_apps/library-system/: README.md
web_apps/yew-app/: Trunk.toml  index.html
web_apps/yew-pomodoro/: Cargo.toml  styles.css
web_apps/yew-pomodoro/src/: main.rs  models.rs  storage.rs  timer.rs
yamori/: Makefile  README.md
yamori/src/: cli.rs  main.rs  test.rs
yew-pomodoro/: Cargo.toml  Dockerfile  README.md  index.html
yew-pomodoro/src/: main.rs
(+107 files in other folders)
