[package]
name = "tokage"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.anyhow]
version = "^1.0.0"

[dependencies.similar]
version = "^2.7.0"

[dependencies.clap]
version = "^4.5.0"
features = ["derive"]

[dependencies.crossterm]
version = "^0.28.0"

[dependencies.ratatui]
version = "^0.29.0"

[dependencies.serde]
version = "^1.0.0"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.9"

[dependencies.toml]
version = "0.8" 