[package]
name = "yew-pomodoro"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-timers = "0.3"
web-sys = { version = "0.3.77", features = [
    "console",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Window",
    "Navigator",
    "Clipboard",
    "Storage",
] }
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2"
log = "0.4"
cfg-if = "1.0"
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["wee_alloc"]
